<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
>

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.devaltus.clients</groupId>
    <artifactId>envpublisher</artifactId>
    <version>0.1</version>


    <properties>
      <java.version>17</java.version>
      <lombok.version>1.18.26</lombok.version>
      <mockito>5.9.1</mockito>
      <dagger.version>2.44</dagger.version>
      <gcs.colorconsole>1.12</gcs.colorconsole>
      <gcs.metrics>1.3</gcs.metrics>
      <gcs.config>1.31</gcs.config>
      <gcs.rest>1.38</gcs.rest>
        <log>
            <api.version>2.0.10</api.version>
            <classic.version>1.4.14</classic.version>
            <log4j12.version>2.0.7</log4j12.version>
        </log>


      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <repositories>
	<repository>
            <id>central</id>
            <name>Maven Central</name>
            <layout>default</layout>
            <url>https://repo1.maven.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
	<repository>
            <id>github</id>
            <name>GitHub GCS-Tech-Toolset Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/gcs-tech-toolset/*</url>
        </repository>
    </repositories>


    <distributionManagement>
      <!--repository>
            <id>github</id>
            <name>GitHub GCS-Tech-Toolset Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/gcs-tech-toolset/*</url>
        </repository-->
    </distributionManagement>

    <dependencies>
      <!-- lombok/logging -->
      <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${mockito}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.1.1</version>
            <scope>test</scope>
        </dependency>
	<dependency>
            <groupId>org.junit-pioneer</groupId>
            <artifactId>junit-pioneer</artifactId>
            <version>2.0.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${log.api.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${log.classic.version}</version>
        </dependency>
	<dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${log.log4j12.version}</version>
        </dependency>


        <!-- apache -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.9</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-configuration2</artifactId>
            <version>2.7</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>1.7.30</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>1.9.4</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>



        <!-- gcs toolset -->
	<dependency>
            <groupId>gcs.toolset</groupId>
            <artifactId>colorconsole</artifactId>
            <version>${gcs.colorconsole}</version>
        </dependency>
        <dependency>
            <groupId>gcs.toolset</groupId>
            <artifactId>metrics</artifactId>
            <version>${gcs.metrics}</version>
        </dependency>
        <dependency>
            <groupId>gcs.toolset</groupId>
            <artifactId>config</artifactId>
            <version>${gcs.config}</version>
        </dependency>
        <dependency>
            <groupId>gcs.toolset</groupId>
            <artifactId>rest</artifactId>
            <version>${gcs.rest}</version>
        </dependency>


        <!-- dagger -->
        <dependency>
            <groupId>com.google.dagger</groupId>
            <artifactId>dagger</artifactId>
            <version>${dagger.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.dagger</groupId>
            <artifactId>dagger-compiler</artifactId>
            <version>${dagger.version}</version>
        </dependency>


    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <!--release>12</release -->
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>
                        <arg>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg>
                        <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.google.dagger</groupId>
                            <artifactId>dagger-compiler</artifactId>
                            <version>${dagger.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <!--forceJavacCompilerUse>true</forceJavacCompilerUse -->
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <dependencies>
		    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>5.9.1</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <systemPropertyVariables>
                        <log4j.configuration>file:${project.basedir}/src/test/resources/log4j.console</log4j.configuration>
                        <logback.configurationFile>file:${project.basedir}/src/test/resources/logback-test.xml</logback.configurationFile>
                        <APP_CONFIG>file:${project.basedir}/etc/envpublisher.xml</APP_CONFIG>
                    </systemPropertyVariables>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
